kubernetes/overlays/prod/overlays/askem-dev/ingress/private-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-web-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: askem-dev-web-private
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: "app.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hmi-client
                port:
                  number: 8080

    - host: "server.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hmi-server
                port:
                  number: 3000

    - host: "graphdb.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-service-graphdb
                port:
                  number: 7687

    - host: "documentation.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: terarium-docs
                port:
                  number: 8000

    - host: "mit-tr.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mit-tr
                port:
                  number: 4046

    - host: "beaker.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beaker
                port:
                  number: 3050

    - host: "pyciemss.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyciemss-api
                port:
                  number: 3040

    - host: "redis.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis
                port:
                  number: 6379

    - host: "sciml-service.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sciml-service
                port:
                  number: 3030

    - host: "skema-rs.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-rs
                port:
                  number: 4040

    - host: "skema-tr.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-test-reading
                port:
                  number: 4047

    - host: "skema-unified.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-unified
                port:
                  number: 4045

    - host: "climate-data.dev.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: climate-data
                port:
                  number: 8000

  tls:
    - hosts:
        - "app.dev.terarium.ai"
        - "beaker.dev.terarium.ai"
        - "climate-data.dev.terarium.ai"
        - "documentation.dev.terarium.ai"
        - "funman.dev.terarium.ai"
        - "graphdb.dev.terarium.ai"
        - "mit-proxy.dev.terarium.ai"
        - "mit-tr.dev.terarium.ai"
        - "pyciemss.dev.terarium.ai"
        - "redis.dev.terarium.ai"
        - "sciml-service.dev.terarium.ai"
        - "server.dev.terarium.ai"
        - "skema-rs.dev.terarium.ai"
        - "skema-unified.dev.terarium.ai"
